verif/test/deca/context/invalid/decl-void-verif.res
src/test/deca/context/invalid/decl-void.deca:9:9: Invalid type for variable declaration: void
